Updated swagger.json
